...
                CategoryItem("Bill Payment", "receipt_long"),
                CategoryItem("Credit Card / Loan Payment", "credit_card"),
                CategoryItem("Cash Out / In", "account_balance_wallet"),
                CategoryItem("Others", "category")
            )
            TransactionType.INSTALLMENT -> listOf(
                CategoryItem("Gadgets & Tech", "devices"),
                CategoryItem("Appliances", "kitchen"),
                CategoryItem("Furniture", "weekend"),
                CategoryItem("Fashion & Apparel", "checkroom"),
                CategoryItem("Vehicle & Auto", "directions_car"),
                CategoryItem("Travel", "flight"),
                CategoryItem("Others", "category")
...
